[build] configure javafx modules for Apple silicon